fixed gap between navbar and second section - but introduced a gap at bottom of page! 'Solved' problem via hack (todo: do correctly after some sleep!)

--- a/public/components/navbar.css
+++ b/public/components/navbar.css
@@ -104,7 +104,7 @@ nav > .Navbar_Toggler > .Line {
 
 
 #Section-1 {
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 #Section-2 {
