--- a/public/style/global.css
+++ b/public/style/global.css
@@ -23,7 +23,9 @@
     --lg: 992px;
     --xl: 1200px;
 }
-
+body {
+    background: lightblue;
+}
 
 .Button {
     background: #4285F4;
